--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "routember",
   "version": "0.0.1",
   "description": "Remember attempted URL before redirect",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc",
-    "prepublish": "npm run build"
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build": "npm run build:esm && npm run build:cjs"
   },
   "peerDependencies": {
     "next": "^14.0.0",
