--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "build:esm": "tsc --project tsconfig.esm.json",
     "build:cjs": "tsc --project tsconfig.cjs.json",
-    "build": "npm run build:esm && npm run build:cjs"
+    "build": "npm run build:esm && npm run build:cjs",
+    "prepare": "yarn run build"
   },
   "peerDependencies": {
     "next": "^14.0.0",
